support_tools/swigwin-3.0.12/Examples/test-suite/errors/cpp_no_return_type.i
%module xxx

struct R {};

struct S {
  R() {}
};

typedef struct U {
  UU() {}
} UU;

